--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,3 @@
-
 .wrapper{
     height: 100vh;
     display: grid;
@@ -121,7 +120,15 @@ nav .start-steam, a:nth-child(5):focus~.animation {
     left: 400px;
     background-color: #eb5f1a;
 }
-
+#background-video {
+    height: 800px;
+    background: url(https://cdn.mos.cms.futurecdn.net/fAe5M9dFmtAy9hhwaiDLqK.jpg) no-repeat center 110px;
+    background-size: cover;
+    background-attachment: fixed;
+}
+#background-color {
+    height: 1000px;
+}
 body {
     font-size: 12px;
     font-family: sans-serif;
